--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 11/10/2020
+ms.date: 11/11/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: df62dcdbb264ebc945aa6cf91ee9d8791f33c392
-ms.sourcegitcommit: fbd5427293d9ecccc388bd5fd305c2eb8ada7281
+ms.openlocfilehash: 7f063484489101822400c935b4dcd2a30e5c8226
+ms.sourcegitcommit: 202144092067ea81be1dbb229329518d781dbdfb
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/10/2020
-ms.locfileid: "94464223"
+ms.lasthandoff: 11/12/2020
+ms.locfileid: "94550633"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -49,7 +49,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Beispiel:
+Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version von .net 5,0 SDK. Zum Beispiel:
 
 ```diff
 {
@@ -85,6 +85,9 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
     - <Project Sdk="Microsoft.NET.Sdk.Web">
     + <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
     ```
+    
+    > [!NOTE]
+    > Dieses Update gilt nur für eigenständige Blazor WebAssembly Projekte und die *`Client`* Projekte gehosteter Blazor Lösungen.
 
 1. Aktualisieren Sie die folgenden Eigenschaften:
 
@@ -166,7 +169,7 @@ Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standal
 1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
 1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
-Weitere Informationen finden Sie in folgenden Quellen:
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -193,7 +196,14 @@ Aad B2C:
 +<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.2.0" />
 ```
 
-Weitere Informationen finden Sie in folgenden Quellen:
+> [!NOTE]
+> Das SDK des *`Server`* Projekts in einer gehosteten Blazor WebAssembly Lösung bleibt bestehen `Microsoft.NET.Sdk.Web` :
+>
+> ```xml
+> <Project Sdk="Microsoft.NET.Sdk.Web">
+> ```
+
+Weitere Informationen finden Sie unter
 
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
@@ -214,16 +224,50 @@ So beheben Sie den Fehler
 1. Greifen Sie in der Azure-Portal auf das [Manifest der APP](/azure/active-directory/develop/reference-app-manifest)zu.
 1. Legen Sie das- [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) Attribut auf `null` oder fest `true` .
 
+## <a name="update-no-locrazor-class-libraries-rcls"></a>Aktualisieren von Razor Klassenbibliotheken (rcls)
+
+Migrieren Sie Razor Klassenbibliotheken (rcls), um neue APIs oder Features zu nutzen, die als Teil von ASP.net Core 5,0 eingeführt werden. 
+
+So aktualisieren Sie eine RCL-Zielkomponente:
+
+1. Aktualisieren Sie die folgenden Eigenschaften in der Projektdatei:
+
+   ```diff
+   <Project Sdk="Microsoft.NET.Sdk.Razor">
+    
+     <PropertyGroup>
+   -     <TargetFramework>netstandard2.0</TargetFramework>
+   -     <RazorLangVersion>3.0</RazorLangVersion>
+   +     <TargetFramework>net5.0</TargetFramework>
+     </PropertyGroup>
+   ```
+
+1. Aktualisieren Sie andere Pakete auf die neuesten Versionen. Die neuesten Versionen finden Sie unter [NuGet.org](https://www.nuget.org).
+
+Aktualisieren Sie die folgenden Eigenschaften in der Projektdatei, um eine RCL zu aktualisieren, die auf MVC ausgerichtet ist:
+
+```diff
+<Project Sdk="Microsoft.NET.Sdk.Razor">
+
+  <PropertyGroup>
+-    <TargetFramework>netcoreapp3.1</TargetFramework>
++    <TargetFramework>net5.0</TargetFramework>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+  </PropertyGroup>
+```
+
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Beispiel:
+Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://www.nuget.org/packages?q=Microsoft.AspNetCore.*), [Microsoft. entityframeworkcore. *](https://www.nuget.org/packages?q=Microsoft.EntityFrameworkCore.*), [Microsoft. Extensions. *](https://www.nuget.org/packages?q=Microsoft.Extensions.*), und [System.Net.Http.Jsauf](https://www.nuget.org/packages/System.Net.Http.Json) das Attribut des Paket Verweises auf `Version` 5.0.0 oder höher. Zum Beispiel:
 
 ```diff
 <ItemGroup>
 -    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.6" />
+-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6">
 -    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.6" />
 -    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
 +    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0" />
++    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
 +    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
 +    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
 </ItemGroup>
