--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -6,17 +6,17 @@ ms.author: scaddie
 ms.custom: mvc
 ms.date: 11/11/2020
 no-loc:
-- ':::no-loc(appsettings.json):::'
-- ':::no-loc(ASP.NET Core Identity):::'
-- ':::no-loc(cookie):::'
-- ':::no-loc(Cookie):::'
-- ':::no-loc(Blazor):::'
-- ':::no-loc(Blazor Server):::'
-- ':::no-loc(Blazor WebAssembly):::'
-- ':::no-loc(Identity):::'
-- ":::no-loc(Let's Encrypt):::"
-- ':::no-loc(Razor):::'
-- ':::no-loc(SignalR):::'
+- 'appsettings.json'
+- 'ASP.NET Core Identity'
+- 'cookie'
+- 'Cookie'
+- 'Blazor'
+- 'Blazor Server'
+- 'Blazor WebAssembly'
+- 'Identity'
+- "Let's Encrypt"
+- 'Razor'
+- 'SignalR'
 uid: migration/31-to-50
 ms.openlocfilehash: 7f063484489101822400c935b4dcd2a30e5c8226
 ms.sourcegitcommit: 202144092067ea81be1dbb229329518d781dbdfb
@@ -62,7 +62,7 @@ ms.locfileid: "94550633"
 
 ## <a name="update-the-target-framework"></a><span data-ttu-id="80e97-113">Aktualisieren des Ziel Frameworks</span><span class="sxs-lookup"><span data-stu-id="80e97-113">Update the target framework</span></span>
 
-<span data-ttu-id="80e97-114">Wenn Sie ein :::no-loc(Blazor WebAssembly)::: Projekt aktualisieren, fahren Sie mit dem Abschnitt [ :::no-loc(Blazor WebAssembly)::: Projekte aktualisieren](#update-blazor-webassembly-projects) fort.</span><span class="sxs-lookup"><span data-stu-id="80e97-114">If updating a :::no-loc(Blazor WebAssembly)::: project, skip to the [Update :::no-loc(Blazor WebAssembly)::: projects](#update-blazor-webassembly-projects) section.</span></span> <span data-ttu-id="80e97-115">Für alle anderen ASP.net Core Projekttyp aktualisieren Sie den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) der Projektdatei auf Folgendes `net5.0` :</span><span class="sxs-lookup"><span data-stu-id="80e97-115">For any other ASP.NET Core project type, update the project file's [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `net5.0`:</span></span>
+<span data-ttu-id="80e97-114">Wenn Sie ein Blazor WebAssembly Projekt aktualisieren, fahren Sie mit dem Abschnitt [ Blazor WebAssembly Projekte aktualisieren](#update-blazor-webassembly-projects) fort.</span><span class="sxs-lookup"><span data-stu-id="80e97-114">If updating a Blazor WebAssembly project, skip to the [Update Blazor WebAssembly projects](#update-blazor-webassembly-projects) section.</span></span> <span data-ttu-id="80e97-115">Für alle anderen ASP.net Core Projekttyp aktualisieren Sie den [zielframeworkmoniker (TFM)](/dotnet/standard/frameworks) der Projektdatei auf Folgendes `net5.0` :</span><span class="sxs-lookup"><span data-stu-id="80e97-115">For any other ASP.NET Core project type, update the project file's [Target Framework Moniker (TFM)](/dotnet/standard/frameworks) to `net5.0`:</span></span>
 
 ```diff
 <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -75,28 +75,28 @@ ms.locfileid: "94550633"
 </Project>
 ```
 
-## <a name="update-no-locblazor-webassembly-projects"></a><span data-ttu-id="80e97-116">Aktualisieren von :::no-loc(Blazor WebAssembly)::: Projekten</span><span class="sxs-lookup"><span data-stu-id="80e97-116">Update :::no-loc(Blazor WebAssembly)::: projects</span></span>
+## <a name="update-no-locblazor-webassembly-projects"></a><span data-ttu-id="80e97-116">Aktualisieren von Blazor WebAssembly Projekten</span><span class="sxs-lookup"><span data-stu-id="80e97-116">Update Blazor WebAssembly projects</span></span>
 
-<span data-ttu-id="80e97-117">:::no-loc(Blazor WebAssembly):::Wenden Sie für ein Projekt, einschließlich des *`Client`* Projekts einer gehosteten :::no-loc(Blazor)::: Lösung, die folgenden Änderungen auf die Projektdatei an:</span><span class="sxs-lookup"><span data-stu-id="80e97-117">For a :::no-loc(Blazor WebAssembly)::: project, including the *`Client`* project of a hosted :::no-loc(Blazor)::: solution, apply the following changes to the project file:</span></span>
+<span data-ttu-id="80e97-117">Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Projekts einer gehosteten Blazor Lösung, die folgenden Änderungen auf die Projektdatei an:</span><span class="sxs-lookup"><span data-stu-id="80e97-117">For a Blazor WebAssembly project, including the *`Client`* project of a hosted Blazor solution, apply the following changes to the project file:</span></span>
 
-1. <span data-ttu-id="80e97-118">Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.:::no-loc(Blazor):::WebAssembly` :</span><span class="sxs-lookup"><span data-stu-id="80e97-118">Update the SDK from `Microsoft.NET.Sdk.Web` to `Microsoft.NET.Sdk.:::no-loc(Blazor):::WebAssembly`:</span></span>
+1. <span data-ttu-id="80e97-118">Aktualisieren Sie das SDK von `Microsoft.NET.Sdk.Web` auf `Microsoft.NET.Sdk.BlazorWebAssembly` :</span><span class="sxs-lookup"><span data-stu-id="80e97-118">Update the SDK from `Microsoft.NET.Sdk.Web` to `Microsoft.NET.Sdk.BlazorWebAssembly`:</span></span>
 
     ```diff
     - <Project Sdk="Microsoft.NET.Sdk.Web">
-    + <Project Sdk="Microsoft.NET.Sdk.:::no-loc(Blazor):::WebAssembly">
+    + <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
     ```
     
     > [!NOTE]
-    > <span data-ttu-id="80e97-119">Dieses Update gilt nur für eigenständige :::no-loc(Blazor WebAssembly)::: Projekte und die *`Client`* Projekte gehosteter :::no-loc(Blazor)::: Lösungen.</span><span class="sxs-lookup"><span data-stu-id="80e97-119">This update only applies to standalone :::no-loc(Blazor WebAssembly)::: projects and the *`Client`* projects of hosted :::no-loc(Blazor)::: solutions.</span></span>
+    > <span data-ttu-id="80e97-119">Dieses Update gilt nur für eigenständige Blazor WebAssembly Projekte und die *`Client`* Projekte gehosteter Blazor Lösungen.</span><span class="sxs-lookup"><span data-stu-id="80e97-119">This update only applies to standalone Blazor WebAssembly projects and the *`Client`* projects of hosted Blazor solutions.</span></span>
 
 1. <span data-ttu-id="80e97-120">Aktualisieren Sie die folgenden Eigenschaften:</span><span class="sxs-lookup"><span data-stu-id="80e97-120">Update the following properties:</span></span>
 
     ```diff
-    <Project Sdk="Microsoft.NET.Sdk.:::no-loc(Blazor):::WebAssembly">
+    <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
     
       <PropertyGroup>
     -     <TargetFramework>netstandard2.1</TargetFramework>
-    -     <:::no-loc(Razor):::LangVersion>3.0</:::no-loc(Razor):::LangVersion>
+    -     <RazorLangVersion>3.0</RazorLangVersion>
     +     <TargetFramework>net5.0</TargetFramework>
       </PropertyGroup>
     ```
@@ -110,9 +110,9 @@ ms.locfileid: "94550633"
 
 1. <span data-ttu-id="80e97-122">Aktualisieren Sie andere Pakete auf die neuesten Versionen.</span><span class="sxs-lookup"><span data-stu-id="80e97-122">Update other packages to their latest versions.</span></span> <span data-ttu-id="80e97-123">Die neuesten Versionen finden Sie unter [NuGet.org](https://www.nuget.org).</span><span class="sxs-lookup"><span data-stu-id="80e97-123">The latest versions can be found at [NuGet.org](https://www.nuget.org).</span></span>
 
-### <a name="standalone-no-locblazor-webassembly-app-with-microsoft-accounts"></a><span data-ttu-id="80e97-124">Eigenständige :::no-loc(Blazor WebAssembly)::: App mit Microsoft-Konten</span><span class="sxs-lookup"><span data-stu-id="80e97-124">Standalone :::no-loc(Blazor WebAssembly)::: app with Microsoft Accounts</span></span>
+### <a name="standalone-no-locblazor-webassembly-app-with-microsoft-accounts"></a><span data-ttu-id="80e97-124">Eigenständige Blazor WebAssembly App mit Microsoft-Konten</span><span class="sxs-lookup"><span data-stu-id="80e97-124">Standalone Blazor WebAssembly app with Microsoft Accounts</span></span>
 
-<span data-ttu-id="80e97-125">Für eine eigenständige :::no-loc(Blazor WebAssembly)::: app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) für Microsoft-Konten zu verwenden:</span><span class="sxs-lookup"><span data-stu-id="80e97-125">For a standalone :::no-loc(Blazor WebAssembly)::: app registered in the Azure portal to use Azure Active Directory (AAD) for Microsoft Accounts:</span></span>
+<span data-ttu-id="80e97-125">Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) für Microsoft-Konten zu verwenden:</span><span class="sxs-lookup"><span data-stu-id="80e97-125">For a standalone Blazor WebAssembly app registered in the Azure portal to use Azure Active Directory (AAD) for Microsoft Accounts:</span></span>
 
 * <span data-ttu-id="80e97-126">Die APP erfordert die `openid` `offline_access` Bereiche und:</span><span class="sxs-lookup"><span data-stu-id="80e97-126">The app requires the `openid` and `offline_access` scopes:</span></span>
 
@@ -127,9 +127,9 @@ ms.locfileid: "94550633"
 
 <span data-ttu-id="80e97-129">Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-microsoft-accounts>.</span><span class="sxs-lookup"><span data-stu-id="80e97-129">For more information, see <xref:blazor/security/webassembly/standalone-with-microsoft-accounts>.</span></span>
 
-### <a name="standalone-no-locblazor-webassembly-app-with-azure-active-directory-aad"></a><span data-ttu-id="80e97-130">Eigenständige :::no-loc(Blazor WebAssembly)::: App mit Azure Active Directory (AAD)</span><span class="sxs-lookup"><span data-stu-id="80e97-130">Standalone :::no-loc(Blazor WebAssembly)::: app with Azure Active Directory (AAD)</span></span>
+### <a name="standalone-no-locblazor-webassembly-app-with-azure-active-directory-aad"></a><span data-ttu-id="80e97-130">Eigenständige Blazor WebAssembly App mit Azure Active Directory (AAD)</span><span class="sxs-lookup"><span data-stu-id="80e97-130">Standalone Blazor WebAssembly app with Azure Active Directory (AAD)</span></span>
 
-<span data-ttu-id="80e97-131">Für eine eigenständige :::no-loc(Blazor WebAssembly)::: app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) zu verwenden:</span><span class="sxs-lookup"><span data-stu-id="80e97-131">For a standalone :::no-loc(Blazor WebAssembly)::: app registered in the Azure portal to use Azure Active Directory (AAD):</span></span>
+<span data-ttu-id="80e97-131">Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) zu verwenden:</span><span class="sxs-lookup"><span data-stu-id="80e97-131">For a standalone Blazor WebAssembly app registered in the Azure portal to use Azure Active Directory (AAD):</span></span>
 
 * <span data-ttu-id="80e97-132">Die APP erfordert den folgenden `https://graph.microsoft.com/User.Read` Bereich:</span><span class="sxs-lookup"><span data-stu-id="80e97-132">The app requires the `https://graph.microsoft.com/User.Read` scope:</span></span>
 
@@ -144,9 +144,9 @@ ms.locfileid: "94550633"
   
 <span data-ttu-id="80e97-135">Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory>.</span><span class="sxs-lookup"><span data-stu-id="80e97-135">For more information, see <xref:blazor/security/webassembly/standalone-with-azure-active-directory>.</span></span>
 
-### <a name="standalone-no-locblazor-app-with-azure-active-directory-aad-b2c"></a><span data-ttu-id="80e97-136">Eigenständige :::no-loc(Blazor)::: App mit Azure Active Directory (AAD) B2C</span><span class="sxs-lookup"><span data-stu-id="80e97-136">Standalone :::no-loc(Blazor)::: app with Azure Active Directory (AAD) B2C</span></span>
+### <a name="standalone-no-locblazor-app-with-azure-active-directory-aad-b2c"></a><span data-ttu-id="80e97-136">Eigenständige Blazor App mit Azure Active Directory (AAD) B2C</span><span class="sxs-lookup"><span data-stu-id="80e97-136">Standalone Blazor app with Azure Active Directory (AAD) B2C</span></span>
 
-<span data-ttu-id="80e97-137">Für eine eigenständige :::no-loc(Blazor WebAssembly)::: app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) B2C zu verwenden:</span><span class="sxs-lookup"><span data-stu-id="80e97-137">For a standalone :::no-loc(Blazor WebAssembly)::: app registered in the Azure portal to use Azure Active Directory (AAD) B2C:</span></span>
+<span data-ttu-id="80e97-137">Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) B2C zu verwenden:</span><span class="sxs-lookup"><span data-stu-id="80e97-137">For a standalone Blazor WebAssembly app registered in the Azure portal to use Azure Active Directory (AAD) B2C:</span></span>
 
 * <span data-ttu-id="80e97-138">Die APP erfordert die `openid` `offline_access` Bereiche und:</span><span class="sxs-lookup"><span data-stu-id="80e97-138">The app requires the `openid` and `offline_access` scopes:</span></span>
 
@@ -161,9 +161,9 @@ ms.locfileid: "94550633"
 
 <span data-ttu-id="80e97-141">Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c>.</span><span class="sxs-lookup"><span data-stu-id="80e97-141">For more information, see <xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c>.</span></span>
 
-### <a name="hosted-no-locblazor-webassembly-app-with-azure-active-directory-aad-or-b2c"></a><span data-ttu-id="80e97-142">Gehostete :::no-loc(Blazor WebAssembly)::: App mit Azure Active Directory (AAD) oder B2C</span><span class="sxs-lookup"><span data-stu-id="80e97-142">Hosted :::no-loc(Blazor WebAssembly)::: app with Azure Active Directory (AAD) or B2C</span></span>
+### <a name="hosted-no-locblazor-webassembly-app-with-azure-active-directory-aad-or-b2c"></a><span data-ttu-id="80e97-142">Gehostete Blazor WebAssembly App mit Azure Active Directory (AAD) oder B2C</span><span class="sxs-lookup"><span data-stu-id="80e97-142">Hosted Blazor WebAssembly app with Azure Active Directory (AAD) or B2C</span></span>
 
-<span data-ttu-id="80e97-143">*`Client`* Bei der APP-Registrierung einer gehosteten :::no-loc(Blazor)::: Lösung, die Aad oder Aad B2C für die Benutzerauthentifizierung verwendet, sollte eine **Single-Page-Anwendung** der Azure apps-Platt Form Konfiguration verwendet werden:</span><span class="sxs-lookup"><span data-stu-id="80e97-143">The *`Client`* app registration of a hosted :::no-loc(Blazor)::: solution that uses AAD or AAD B2C for user authentication should use a **Single-page application** Azure Apps platform configuration:</span></span>
+<span data-ttu-id="80e97-143">*`Client`* Bei der APP-Registrierung einer gehosteten Blazor Lösung, die Aad oder Aad B2C für die Benutzerauthentifizierung verwendet, sollte eine **Single-Page-Anwendung** der Azure apps-Platt Form Konfiguration verwendet werden:</span><span class="sxs-lookup"><span data-stu-id="80e97-143">The *`Client`* app registration of a hosted Blazor solution that uses AAD or AAD B2C for user authentication should use a **Single-page application** Azure Apps platform configuration:</span></span>
 
 1. <span data-ttu-id="80e97-144">Entfernen Sie in der Azure-Portal App-Registrierung für die *`Client`* App die **Webplattform** -Konfiguration.</span><span class="sxs-lookup"><span data-stu-id="80e97-144">In the Azure portal app registration for the *`Client`* app, remove the **Web** platform configuration.</span></span>
 1. <span data-ttu-id="80e97-145">Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.</span><span class="sxs-lookup"><span data-stu-id="80e97-145">Add a **Single-page application** platform configuration with the app's redirect URI.</span></span>
@@ -174,30 +174,30 @@ ms.locfileid: "94550633"
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
 * <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
 
-### <a name="update-the-server-project-of-a-hosted-no-locblazor-solution"></a><span data-ttu-id="80e97-148">Aktualisieren des Server Projekts einer gehosteten :::no-loc(Blazor)::: Lösung</span><span class="sxs-lookup"><span data-stu-id="80e97-148">Update the Server project of a hosted :::no-loc(Blazor)::: solution</span></span>
+### <a name="update-the-server-project-of-a-hosted-no-locblazor-solution"></a><span data-ttu-id="80e97-148">Aktualisieren des Server Projekts einer gehosteten Blazor Lösung</span><span class="sxs-lookup"><span data-stu-id="80e97-148">Update the Server project of a hosted Blazor solution</span></span>
 
-<span data-ttu-id="80e97-149">Aktualisieren Sie das *`Server`* Projekt einer gehosteten :::no-loc(Blazor)::: Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.</span><span class="sxs-lookup"><span data-stu-id="80e97-149">Update the *`Server`* project of a hosted :::no-loc(Blazor)::: solution as an ASP.NET Core app following the general guidance in this article.</span></span>
+<span data-ttu-id="80e97-149">Aktualisieren Sie das *`Server`* Projekt einer gehosteten Blazor Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.</span><span class="sxs-lookup"><span data-stu-id="80e97-149">Update the *`Server`* project of a hosted Blazor solution as an ASP.NET Core app following the general guidance in this article.</span></span>
 
-<span data-ttu-id="80e97-150">Außerdem *`Server`* sollten Projekte, die Benutzer für Client- :::no-loc(Blazor WebAssembly)::: apps mit Azure Active Directory (AAD) oder B2C authentifizieren, neue Microsoft :::no-loc(Identity)::: v 2.0-Pakete übernehmen:</span><span class="sxs-lookup"><span data-stu-id="80e97-150">Additionally, *`Server`* projects that authenticate users to client :::no-loc(Blazor WebAssembly)::: apps with Azure Active Directory (AAD) or B2C should adopt new Microsoft :::no-loc(Identity)::: v2.0 packages:</span></span> 
+<span data-ttu-id="80e97-150">Außerdem *`Server`* sollten Projekte, die Benutzer für Client- Blazor WebAssembly apps mit Azure Active Directory (AAD) oder B2C authentifizieren, neue Microsoft Identity v 2.0-Pakete übernehmen:</span><span class="sxs-lookup"><span data-stu-id="80e97-150">Additionally, *`Server`* projects that authenticate users to client Blazor WebAssembly apps with Azure Active Directory (AAD) or B2C should adopt new Microsoft Identity v2.0 packages:</span></span> 
   
 <span data-ttu-id="80e97-151">Für Aad:</span><span class="sxs-lookup"><span data-stu-id="80e97-151">For AAD:</span></span>
 
 ```diff
 -<PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="..." />
-+<PackageReference Include="Microsoft.:::no-loc(Identity):::.Web" Version="1.2.0" />
-+<PackageReference Include="Microsoft.:::no-loc(Identity):::.Web.UI" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.2.0" />
 ```
 
 <span data-ttu-id="80e97-152">Aad B2C:</span><span class="sxs-lookup"><span data-stu-id="80e97-152">For AAD B2C:</span></span>
 
 ```diff
 -<PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="..." />
-+<PackageReference Include="Microsoft.:::no-loc(Identity):::.Web" Version="1.2.0" />
-+<PackageReference Include="Microsoft.:::no-loc(Identity):::.Web.UI" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.2.0" />
 ```
 
 > [!NOTE]
-> <span data-ttu-id="80e97-153">Das SDK des *`Server`* Projekts in einer gehosteten :::no-loc(Blazor WebAssembly)::: Lösung bleibt bestehen `Microsoft.NET.Sdk.Web` :</span><span class="sxs-lookup"><span data-stu-id="80e97-153">The SDK of the *`Server`* project in a hosted :::no-loc(Blazor WebAssembly)::: solution remains `Microsoft.NET.Sdk.Web`:</span></span>
+> <span data-ttu-id="80e97-153">Das SDK des *`Server`* Projekts in einer gehosteten Blazor WebAssembly Lösung bleibt bestehen `Microsoft.NET.Sdk.Web` :</span><span class="sxs-lookup"><span data-stu-id="80e97-153">The SDK of the *`Server`* project in a hosted Blazor WebAssembly solution remains `Microsoft.NET.Sdk.Web`:</span></span>
 >
 > ```xml
 > <Project Sdk="Microsoft.NET.Sdk.Web">
@@ -210,7 +210,7 @@ ms.locfileid: "94550633"
 
 ### <a name="unauthorized-client-for-azure-active-directory-aad"></a><span data-ttu-id="80e97-155">Nicht autorisierter Client für Azure Active Directory (AAD)</span><span class="sxs-lookup"><span data-stu-id="80e97-155">Unauthorized client for Azure Active Directory (AAD)</span></span>
 
-<span data-ttu-id="80e97-156">Nach dem Upgrade einer :::no-loc(Blazor WebAssembly)::: app, die Aad für die Authentifizierung verwendet, erhalten Sie möglicherweise die folgende Fehlermeldung für den Anmelde Rückruf an die APP, nachdem sich der Benutzer mit Aad angemeldet hat:</span><span class="sxs-lookup"><span data-stu-id="80e97-156">After upgrading a :::no-loc(Blazor WebAssembly)::: app that uses AAD for authentication, you may receive the following error on the login callback to the app after the user signs in with AAD:</span></span>
+<span data-ttu-id="80e97-156">Nach dem Upgrade einer Blazor WebAssembly app, die Aad für die Authentifizierung verwendet, erhalten Sie möglicherweise die folgende Fehlermeldung für den Anmelde Rückruf an die APP, nachdem sich der Benutzer mit Aad angemeldet hat:</span><span class="sxs-lookup"><span data-stu-id="80e97-156">After upgrading a Blazor WebAssembly app that uses AAD for authentication, you may receive the following error on the login callback to the app after the user signs in with AAD:</span></span>
 
 > <span data-ttu-id="80e97-157">Info: Fehler bei der Autorisierung von Microsoft. aspnetcore. Authorization. defaultauthorizationservice [2].</span><span class="sxs-lookup"><span data-stu-id="80e97-157">info: Microsoft.AspNetCore.Authorization.DefaultAuthorizationService[2] Authorization failed.</span></span> <span data-ttu-id="80e97-158">Diese Anforderungen wurden nicht erfüllt: denyanonymousauthorizationrequirements: erfordert einen authentifizierten Benutzer.</span><span class="sxs-lookup"><span data-stu-id="80e97-158">These requirements were not met: DenyAnonymousAuthorizationRequirement: Requires an authenticated user.</span></span>
 
@@ -224,20 +224,20 @@ ms.locfileid: "94550633"
 1. <span data-ttu-id="80e97-163">Greifen Sie in der Azure-Portal auf das [Manifest der APP](/azure/active-directory/develop/reference-app-manifest)zu.</span><span class="sxs-lookup"><span data-stu-id="80e97-163">In the Azure portal, access the [app's manifest](/azure/active-directory/develop/reference-app-manifest).</span></span>
 1. <span data-ttu-id="80e97-164">Legen Sie das- [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) Attribut auf `null` oder fest `true` .</span><span class="sxs-lookup"><span data-stu-id="80e97-164">Set the [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) attribute to `null` or `true`.</span></span>
 
-## <a name="update-no-locrazor-class-libraries-rcls"></a><span data-ttu-id="80e97-165">Aktualisieren von :::no-loc(Razor)::: Klassenbibliotheken (rcls)</span><span class="sxs-lookup"><span data-stu-id="80e97-165">Update :::no-loc(Razor)::: class libraries (RCLs)</span></span>
+## <a name="update-no-locrazor-class-libraries-rcls"></a><span data-ttu-id="80e97-165">Aktualisieren von Razor Klassenbibliotheken (rcls)</span><span class="sxs-lookup"><span data-stu-id="80e97-165">Update Razor class libraries (RCLs)</span></span>
 
-<span data-ttu-id="80e97-166">Migrieren Sie :::no-loc(Razor)::: Klassenbibliotheken (rcls), um neue APIs oder Features zu nutzen, die als Teil von ASP.net Core 5,0 eingeführt werden.</span><span class="sxs-lookup"><span data-stu-id="80e97-166">Migrate :::no-loc(Razor)::: class libraries (RCLs) to take advantage of new APIs or features that are introduced as part of ASP.NET Core 5.0.</span></span> 
+<span data-ttu-id="80e97-166">Migrieren Sie Razor Klassenbibliotheken (rcls), um neue APIs oder Features zu nutzen, die als Teil von ASP.net Core 5,0 eingeführt werden.</span><span class="sxs-lookup"><span data-stu-id="80e97-166">Migrate Razor class libraries (RCLs) to take advantage of new APIs or features that are introduced as part of ASP.NET Core 5.0.</span></span> 
 
 <span data-ttu-id="80e97-167">So aktualisieren Sie eine RCL-Zielkomponente:</span><span class="sxs-lookup"><span data-stu-id="80e97-167">To update a RCL that targets components:</span></span>
 
 1. <span data-ttu-id="80e97-168">Aktualisieren Sie die folgenden Eigenschaften in der Projektdatei:</span><span class="sxs-lookup"><span data-stu-id="80e97-168">Update the following properties in the project file:</span></span>
 
    ```diff
-   <Project Sdk="Microsoft.NET.Sdk.:::no-loc(Razor):::">
+   <Project Sdk="Microsoft.NET.Sdk.Razor">
     
      <PropertyGroup>
    -     <TargetFramework>netstandard2.0</TargetFramework>
-   -     <:::no-loc(Razor):::LangVersion>3.0</:::no-loc(Razor):::LangVersion>
+   -     <RazorLangVersion>3.0</RazorLangVersion>
    +     <TargetFramework>net5.0</TargetFramework>
      </PropertyGroup>
    ```
@@ -247,12 +247,12 @@ ms.locfileid: "94550633"
 <span data-ttu-id="80e97-171">Aktualisieren Sie die folgenden Eigenschaften in der Projektdatei, um eine RCL zu aktualisieren, die auf MVC ausgerichtet ist:</span><span class="sxs-lookup"><span data-stu-id="80e97-171">To update an RCL targeting MVC, update the following properties in the project file:</span></span>
 
 ```diff
-<Project Sdk="Microsoft.NET.Sdk.:::no-loc(Razor):::">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
 -    <TargetFramework>netcoreapp3.1</TargetFramework>
 +    <TargetFramework>net5.0</TargetFramework>
-    <Add:::no-loc(Razor):::SupportForMvc>true</Add:::no-loc(Razor):::SupportForMvc>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
 ```
 
@@ -284,7 +284,7 @@ ms.locfileid: "94550633"
 
 <span data-ttu-id="80e97-179">Im Rahmen der Umstellung auf ".net" als Produktname wurden die Docker-Images aus den `mcr.microsoft.com/dotnet/core` Depots in verschoben `mcr.microsoft.com/dotnet` .</span><span class="sxs-lookup"><span data-stu-id="80e97-179">As part of the move to ".NET" as the product name, the Docker images moved from the `mcr.microsoft.com/dotnet/core` repositories to `mcr.microsoft.com/dotnet`.</span></span> <span data-ttu-id="80e97-180">Weitere Informationen finden Sie unter [dotnet/dotnet-docker # 1939](https://github.com/dotnet/dotnet-docker/issues/1939).</span><span class="sxs-lookup"><span data-stu-id="80e97-180">For more information, see [dotnet/dotnet-docker#1939](https://github.com/dotnet/dotnet-docker/issues/1939).</span></span>
 
-## <a name="model-binding-changes-in-aspnet-core-mvc-and-no-locrazor-pages"></a><span data-ttu-id="80e97-181">Änderungen an der Modell Bindung in ASP.net Core MVC und :::no-loc(Razor)::: Seiten</span><span class="sxs-lookup"><span data-stu-id="80e97-181">Model binding changes in ASP.NET Core MVC and :::no-loc(Razor)::: Pages</span></span>
+## <a name="model-binding-changes-in-aspnet-core-mvc-and-no-locrazor-pages"></a><span data-ttu-id="80e97-181">Änderungen an der Modell Bindung in ASP.net Core MVC und Razor Seiten</span><span class="sxs-lookup"><span data-stu-id="80e97-181">Model binding changes in ASP.NET Core MVC and Razor Pages</span></span>
 
 ### <a name="datetime-values-are-model-bound-as-utc-times"></a><span data-ttu-id="80e97-182">DateTime-Werte sind als UTC-Zeitmodell gebunden.</span><span class="sxs-lookup"><span data-stu-id="80e97-182">DateTime values are model bound as UTC times</span></span>
 
